--- a/getmoovin/getmoovin-next/src/styles/components/Countdown.module.css
+++ b/getmoovin/getmoovin-next/src/styles/components/Countdown.module.css
@@ -62,3 +62,13 @@
 .countdownButton:hover {
     background: var(--blue-dark);
 }
+
+.countdownButtonActive {
+    background: var(--white);
+    color: var(--title);
+}
+
+.countdownButtonActive:hover {
+    background: var(--red);
+    color: var(--white);
+}
