--- a/getmoovin/getmoovin-next/src/styles/components/ExperienceBar.module.css
+++ b/getmoovin/getmoovin-next/src/styles/components/ExperienceBar.module.css
@@ -6,6 +6,7 @@
     /* background: var(--background-bar); */
     /* box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.4); */
     border-radius: 5px;
+    margin-bottom: 2rem;
 }
 
 .experienceBar span {
